# VulnScanner-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
datasets/: generate_dataset.py
models/: README.md
notebooks/: model_training.ipynb
rules/: access_control.yaml  auth.yaml  crypto.yaml  injection.yaml  insecure_design.yaml  integrity_failures.yaml  logging.yaml  misconfiguration.yaml  ssrf.yaml
samples/java/: VulnerableApp.java
samples/javascript/: vulnerable_app.js
samples/php/: vulnerable_app.php
samples/python/: vulnerable_app.py
templates/: report.html.j2
tests/: conftest.py  test_ml.py  test_pattern_engine.py  test_reports.py  test_scanner.py
vulnscanner/: __init__.py  cli.py
vulnscanner/ml/: __init__.py  classifier.py  features.py  trainer.py
vulnscanner/patterns/: __init__.py  engine.py
vulnscanner/report/: charts.py  generator.py  sarif.py
vulnscanner/scanner/: __init__.py  core.py  sca.py  url_scanner.py
vulnscanner/simulation/: __init__.py  payloads.py  simulator.py
vulnscanner/utils/: __init__.py  helpers.py  logging.py  models.py
